feat: add new configuration and spell enhancements, fix particle effects